Dynamic paint crash #48373

Closed
opened 2016-05-08 10:04:54 +02:00 by Jose Luis Camacho · 4 comments

System Information
Windows 8.1
16 Gb Ram
Processor: i7 5960
Graphic cards
two Nvidia Quadro M4000
One Firepro W8100
Antivirus: Karspersky
The hardware.jpg

Blender Version
Blender: 2.77a

Short description of error
Blender Quits Unexpected when execute a play with a simply dinamic paint

Exact steps for others to reproduce the error
when i run a simple animation of a color changing passing a plane over a Sphere with Dynamic Painte, Blender quits unexpectedly.
Sorry for my bad English
prueba Pintura Dinamica.blend

**System Information** Windows 8.1 16 Gb Ram Processor: i7 5960 Graphic cards two Nvidia Quadro M4000 One Firepro W8100 Antivirus: Karspersky ![The hardware.jpg](https://archive.blender.org/developer/F309760/The_hardware.jpg) **Blender Version** Blender: 2.77a **Short description of error** Blender Quits Unexpected when execute a play with a simply dinamic paint **Exact steps for others to reproduce the error** when i run a simple animation of a color changing passing a plane over a Sphere with Dynamic Painte, Blender quits unexpectedly. Sorry for my bad English [prueba Pintura Dinamica.blend](https://archive.blender.org/developer/F309757/prueba_Pintura_Dinamica.blend)

Changed status to: 'Open'

Changed status to: 'Open'
Jose Luis Camacho self-assigned this 2016-05-08 10:04:54 +02:00

Added subscriber: @JoseLuisCamachoEspina

Added subscriber: @JoseLuisCamachoEspina

This issue was referenced by 0411cfea9d

This issue was referenced by 0411cfea9d8bfcad6271ccec51bc9a9c641c798c
Bastien Montagne changed title from Dinnamic paint error to Dynamic paint crash 2016-05-08 11:43:15 +02:00
Jose Luis Camacho was unassigned by Bastien Montagne 2016-05-08 11:43:15 +02:00
Bastien Montagne self-assigned this 2016-05-08 11:43:15 +02:00

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48373
No description provided.