source/blender/blenkernel/intern/dynamicpaint.c
@@ -3466,8 +3466,11 @@ static int dynamicPaint_paintMesh(DynamicPaintSurface *surface,
 								sampleColor[2] = brush->b;
 
 								/* Get material+textures color on hit point if required	*/
-								if (brush_usesMaterial(brush, scene))
-									dynamicPaint_doMaterialTex(bMats, sampleColor, &alpha_factor, brushOb, bData->realCoord[bData->s_pos[index] + ss].v, hitCoord, hitTri, brush->dm);
+								if (brush_usesMaterial(brush, scene)) {
+										dynamicPaint_doMaterialTex(bMats, sampleColor, &alpha_factor, brushOb,
+										                           bData->realCoord[bData->s_pos[index] + ss].v,
+										                           hitCoord, hitTri, dm);
+								}
 
 								/* Sample proximity colorband if required	*/
 								if ((hit_found == HIT_PROXIMITY) && (brush->proximity_falloff == MOD_DPAINT_PRFALL_RAMP)) {
